Add analysis visualizations for documentation
Include generated plots to display results in README:
- Clustering optimization and distribution charts
- Classification performance metrics and confusion matrix
- Feature importance analysis
- Decision tree structure visualization

--- a/.gitignore
+++ b/.gitignore
@@ -32,9 +32,7 @@ wheels/
 *.swp
 *.swo
 
-# Results
-results/*.png
-results/*.csv
+# Results - keep visualizations for documentation
 !results/.gitkeep
 
 # OS
